--- a/qtfuzzylite/ui/resources.qrc
+++ b/qtfuzzylite/ui/resources.qrc
@@ -1,5 +1,13 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/colorize.png</file>
+    <file>icons/messagebox_info.png</file>
+    <file>icons/identity.png</file>
+    <file>icons/exit.png</file>
+    <file>icons/filenew.png</file>
+    <file>icons/configure.png</file>
+    <file>icons/top.png</file>
+    <file>icons/bottom.png</file>
     <file>icons/qtfuzzylite.svg</file>
     <file>icons/1uparrow.png</file>
     <file>icons/down.png</file>
