--- a/qtfuzzylite/ui/Wizard.ui
+++ b/qtfuzzylite/ui/Wizard.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>253</width>
-    <height>169</height>
+    <height>175</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -89,8 +89,14 @@
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="sbx_separation">
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="minimum">
+          <double>-1000000.000000000000000</double>
+         </property>
          <property name="maximum">
-          <double>1.000000000000000</double>
+          <double>1000000.000000000000000</double>
          </property>
          <property name="singleStep">
           <double>0.100000000000000</double>
